src/components/Talks/styles.css
@import '../variables.css';

.content {
  justify-content: center;
}

@media (max-width: 767px) {
  .content {
    flex-direction: column;
  }
}

.freeSlot {
  display: flex;
  align-self: center;
  max-height: 220px;
  max-width: 300px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.submit:hover {
  color: #333;
}

.talk {
  flex: 1;
  padding: 20px;
  background: var(--red);
  color: var(--white);
  text-align: center;
  font-weight: 300;
}

.talk:last-child {
  border-top: 0;
  border-left: 1px solid var(--grey);
}

@media (max-width: 767px) {
  .talk:last-child {
    border-top: 1px solid var(--grey);
    border-left: 0;
  }
}

.title {
  margin-top: 10px;
  margin-bottom: 0px;
  font-size: 20px;
  font-weight: 400;
}

.banner {
  max-height: 100px;
  max-width: 100%;
  border: 1.5px solid var(--grey);
  margin: 15px;
}

.description {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 16px;
  line-height: 26px;
}

.description h5,
.description h6 {
  margin: 0;
  font-size: 14px;
  line-height: 21px;
}

.description h5 {
  font-weight: 400;
}

.description h6 {
  font-weight: 300;
}

.description h6 a {
  color: var(--white);
  transition: 0.2s;
}

.description h6 a:hover,
.description h6 a:focus {
  opacity: 0.6;
}

.note {
  font-size: 14px;
}

